# speed-reader

./: .buildpacks  .dokku-monorepo  .gitlab-ci.yml  Procfile  docker-compose.yaml  nginx.conf.sigil  package-lock.json
.githooks/: commit-msg  pre-push
backend/: .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  Procfile  app.json  mypy.ini  nginx.conf.sigil  openapi.json  pycrypto-2.6.1-cp310-cp310-macosx_10_9_universal2.whl  pyproject.toml  requirements.txt  run_tests.sh
backend/migrations/: env.py
backend/migrations/versions/: 0ff8ebf4be84_add_fiction_column_to_text_table.py  1949ebd28376_add_author_field_to_text.py  263a5dcc7047_add_game_mode_column_to_text_table.py  3ff9ef45e8f7_replace_image_url_column_with_image_.py  447f13c21861_alter_options_column_type_in_question_.py  5893547353f5_create_user_table.py  785e7c55a945_create_question_table.py  87646658be5c_remove_game_mode_column_from_text_table.py  b44b7bd79a51_create_text_table.py  c82f5ade59dc_make_email_column_optional_in_user_table.py  d2b56440b8a9_add_summary_column_to_text_table.py  d6cad74cce53_add_source_column_to_text_table.py  d91e9d4c3fb5_add_role_column_to_user_table.py  e413b3bf1e84_add_image_url_field_to_text.py  f2cf4d74fc78_add_description_field_to_text_table.py
backend/src/: cli.py  config.py  database.py  logger.py  main.py  requirements.txt
backend/src/config/: config.py
backend/src/database/: database.py  schema.py
backend/src/factories/: history.py  question.py  text.py  user.py
backend/src/models/: __init__.py  history.py  mixins.py  question.py  text.py  user.py
backend/src/routers/: admin.py  auth.py  dashboard.py  game.py  user.py
backend/src/schema/: token.py  user.py
backend/src/schemas/: __init__.py  game.py  text.py  token.py  user.py
backend/src/services/: auth.py  exception_handlers.py  exceptions.py
backend/src/utils/: auth.py  crypt.py
backend/src/utils/security/: auth.py  crypt.py
backend/tests/: conftest.py  test_admin.py  test_backend.py  test_game.py
frontend/: .eslintrc.json  .gitignore  Dockerfile  Dockerfile.cypress  Dockerfile.dev  cypress.config.ts  cypress.sh  jest.config.ts  (+7 more)
(+199 files in other folders)
