[tool.poetry]
name = "src"
version = "0.1.0"
description = "Python API for Speed Runner"
authors = ["Taeho <taehokimbusines@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
google-cloud-firestore = "^2.14.0"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
black = "^23.12.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
