[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
google-cloud-firestore = "^2.14.0"
python-multipart = "^0.0.6"
types-passlib = "^1.7.7.20240106"
types-python-jose = "^3.3.4.20240106"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
